fix: Make overflow in detached panes hidden
- portals in detached panes would have sharp edges at the bottom, but not at the top

--- a/packages/seed-bible/seed-bible/app/main.css
+++ b/packages/seed-bible/seed-bible/app/main.css
@@ -685,7 +685,6 @@ a:visited {
     0 22px 40px #0000002c;
   display: flex;
   flex-direction: column;
-  overflow: visible;
 }
 
 .sb-pane-shell-detached[data-placement="fullscreen"] {
